samples/_failures_safe/1761468306_ec4610_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5ebf07d.c: In function ‘main’:
./samples/SAFE/__tmp_d5ebf07d.c:174:16: error: ‘decompressed’ undeclared (first use in this function); did you mean ‘decompressed_data’?
  174 |         memcmp(decompressed
      |                ^~~~~~~~~~~~
      |                decompressed_data
./samples/SAFE/__tmp_d5ebf07d.c:174:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d5ebf07d.c:174:28: error: expected ‘)’ at end of input
  174 |         memcmp(decompressed
      |               ~            ^
      |                            )
./samples/SAFE/__tmp_d5ebf07d.c:174:9: error: too few arguments to function ‘memcmp’
  174 |         memcmp(decompressed
      |         ^~~~~~
In file included from ./samples/SAFE/__tmp_d5ebf07d.c:4:
/usr/include/string.h:64:12: note: declared here
   64 | extern int memcmp (const void *__s1, const void *__s2, size_t __n)
      |            ^~~~~~
./samples/SAFE/__tmp_d5ebf07d.c:174:9: error: expected declaration or statement at end of input
  174 |         memcmp(decompressed
      |         ^~~~~~
